Done with Navbar-Added Collapse fixed backgound

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap");
 .App {
-  text-align: center;
+  font-family: "Nunito", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root {
+  --nav-color: hsl(210, 11%, 15%); /* Dark navy blue */
+  --nav-color-hover: hsl(210, 11%, 35%); /* Slightly lighter navy blue */
+  --nav-border-color: hsl(210, 11%, 35%); /* Slightly lighter navy blue */
+  --light-color: hsl(209, 100%, 92%); /* Off-white/light gray */
+  --font-color: hsl(0, 0%, 100%); /* White */
+  --font-color-hover: hsl(0, 0%, 40%); /* Dark gray */
 }
